solved mobile overflow

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ main {
   -webkit-backdrop-filter: blur(5px);
   height: fill-available !important;
   height: -webkit-fill-available !important;
+  height: 94dvh !important;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
   z-index: 0;
 }
